Update and rename Sports.html to sports.html

--- a/sports.html
+++ b/sports.html
@@ -9,7 +9,7 @@
     <ul>
       <li><a href="https://www.formula1.com/">Formula1</a></li>
       <li><a href="https://www.premierleague.com/">Football</a></li>
-      <li>Cricket</li>
+      <li><a href="https://www.bcci.tv/">Cricket</li>
       <li><a href="https://www.ufc.com/">UFC</a></li>
     </ul>
   </body>
